Optimize alert routing and add fallback analysis handling.
Updated Alertmanager configurations to refine routing logic and thresholds, ensuring better alert prioritization. Added fallback mechanisms in the agent to handle AI analysis failures based on a new `fallback_enabled` setting for improved resilience. Updated relevant documentation and environment files accordingly.

--- a/.env.example
+++ b/.env.example
@@ -40,6 +40,10 @@ METRICS_CACHE_TTL=60
 MAX_ACTIONS_PER_CYCLE=3
 SAFETY_MODE=true
 LEARNING_ENABLED=true
+# Enable/disable fallback to rule-based analysis when AI fails
+# Set to false for pure AI testing (fails if OpenAI unavailable)
+# Set to true for production resilience (falls back to rules)
+FALLBACK_ENABLED=true
 
 # Testing Configuration
 ENABLE_TESTING=true
