Document pure AI-driven recovery implementation for DevOps AI Agent.
Added `README_AI_IMPLEMENTATION.md` with detailed architecture, features, and deployment steps for the AI-driven system. Updated `progress.md` to reflect completion of Phase 1: Pure AI Recovery. Refined `requirements.txt` with new dependencies for context gathering and execution modules. Eliminated static recovery patterns, enabling expert-level, adaptive AI decision-making powered by GPT-4. System is now fully operational and test-ready.

--- a/requirements.txt
+++ b/requirements.txt
@@ -6,9 +6,12 @@ pydantic-settings>=2.0.0
 
 # HTTP client
 httpx>=0.25.0
+aiohttp>=3.8.0
 
 # LangChain and AI dependencies
 langchain>=0.1.0
+langchain-core>=0.1.0
+langchain-community>=0.1.0
 langchain-openai>=0.1.0
 openai>=1.0.0
 
@@ -17,6 +20,9 @@ PyGithub>=1.59.0
 
 # Docker API integration
 docker>=7.0.0
+
+# Configuration and file handling
+PyYAML>=6.0.0
 
 # Monitoring and metrics
 prometheus-client>=0.17.0
